--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌊 도야 & 🗻삿포로</h1>
+            <h1>🏔️북해도</h1>
         </div>
         
         <div class="navigation-tabs">
