--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
                         </div>
                         <div class="detail-item">
                             <span class="detail-label">특징</span>
-                            <span class="detail-value">대표적인 지역 과자 이름엔 '이모(고구마)'가 들어가지만 실제로 고구마를 사용하지 않고, 흰 팥 앙금 등이 들어간 부드러운 과자</span>
+                            <span class="detail-value">흰 팥 앙금 등이 들어간 부드러운 과자</span>
                         </div>
                         <div class="detail-item">
                             <span class="detail-label">추천</span>
@@ -641,11 +641,11 @@
                     <div class="restaurant-details">
                         <div class="detail-item">
                             <span class="detail-label">대표상품</span>
-                            <span class="detail-value">도야호 목검(洞爺湖木刀), 에치고야 만주, 아니메 '은혼' 공식 굿즈</span>
+                            <span class="detail-value">에치고야 만주</span>
                         </div>
                         <div class="detail-item">
                             <span class="detail-label">제품명</span>
-                            <span class="detail-value">도야호 목검, 에치고야 만주, 토트백</span>
+                            <span class="detail-value">에치고야 만주, 토트백</span>
                         </div>
                         <div class="detail-item">
                             <span class="detail-label">특징</span>
@@ -654,28 +654,6 @@
                         <div class="detail-item">
                             <span class="detail-label">추천</span>
                             <span class="detail-value">도야호만의 독특한 기념품, 풍당 풍미의 에치고야 만주</span>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="restaurant">
-                    <h3><a href="https://j-picks.com/kr/33/" target="_blank">도야호 온천 관련 특산품</a></h3>
-                    <div class="restaurant-details">
-                        <div class="detail-item">
-                            <span class="detail-label">대표상품</span>
-                            <span class="detail-value">바스클린 일본명탕 시리즈, 바스로마 온천 입욕제, BARTH 탄산입욕제</span>
-                        </div>
-                        <div class="detail-item">
-                            <span class="detail-label">제품명</span>
-                            <span class="detail-value">도야 온천 입욕제, 온천 수건, 온천 타올, 족욕제</span>
-                        </div>
-                        <div class="detail-item">
-                            <span class="detail-label">특징</span>
-                            <span class="detail-value">집에서 도야 온천 재현, 피로회복과 혈액순환 촉진 효과</span>
-                        </div>
-                        <div class="detail-item">
-                            <span class="detail-label">추천</span>
-                            <span class="detail-value">일본 온천문화 체험 가능한 실용적 선물</span>
                         </div>
                     </div>
                 </div>
