--- a/index.html
+++ b/index.html
@@ -2266,7 +2266,7 @@
                 
                 
                 <div class="tourist-item">
-                    <h4>🛍️ 홋카이도청 구 본청사 (적벽돌 청사)</h4>
+                    <h4>🏛️ 홋카이도청 구 본청사 (적벽돌 청사)</h4>
                     <p><strong>역사적 건물</strong>: 메이지시대 건축물, 아름다운 적벽돌 외관으로 유명</p>
                     <p><strong>무료관람</strong>: 내부 견학 가능, 홋카이도 역사와 문화 전시</p>
                     <p><strong>포토존</strong>: 벽돌 건축물의 고풍스러운 분위기로 인스타그램 명소</p>
@@ -2755,8 +2755,8 @@
             {
                 name: '홋카이도청 구 본청사',
                 coords: [43.06439, 141.3468805],
-                emoji: '🛍️',
-                popup: '<b>🛍️ 홋카이도청 구 본청사</b><br>적벽돌 청사<br>메이지시대 건축물<br><a href="https://maps.google.com/?q=43.06439,141.3468805" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                emoji: '🏛️',
+                popup: '<b>🏛️ 홋카이도청 구 본청사</b><br>적벽돌 청사<br>메이지시대 건축물<br><a href="https://maps.google.com/?q=43.06439,141.3468805" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: 'JR 타워 전망실 T38',
