--- a/index.html
+++ b/index.html
@@ -2428,7 +2428,7 @@
             </div>
             
             <div class="category">
-                <h2><span class="emoji">🗘</span>야키토리/이자카야</h2>
+                <h2><span class="emoji">🍗</span>야키토리/이자카야</h2>
                 
                 <div class="restaurant">
                     <h3><a href="https://blog.naver.com/mardukas/221924015876" target="_blank">야키토리 타케토라 (焼鳥竹虎)</a></h3>
@@ -2803,14 +2803,14 @@
             {
                 name: '야키토리 타케토라',
                 coords: [43.0563576 , 141.3568789],
-                emoji: '🗘',
-                popup: '<b>🗘 야키토리 타케토라</b><br>정통 일본식 이자카야<br><a href="https://maps.google.com/?q=43.0563576,141.3568789" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                emoji: '🍗',
+                popup: '<b>🍗 야키토리 타케토라</b><br>정통 일본식 이자카야<br><a href="https://maps.google.com/?q=43.0563576,141.3568789" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '스기노',
                 coords: [43.0540969, 141.3512925],
-                emoji: '🟠',
-                popup: '<b>🟠 스기노</b><br>해산물 전문 이자카야<br>어업 출신 사장의 엄선된 해산물<br><a href="https://maps.google.com/?q=43.0540969,141.3512925" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                emoji: '🐟',
+                popup: '<b>🐟 스기노</b><br>해산물 전문 이자카야<br>어업 출신 사장의 엄선된 해산물<br><a href="https://maps.google.com/?q=43.0540969,141.3512925" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '히토리 나베 토키지',
