--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=3.0">
-    <title>도야 & 삿포로</title>
+    <title>북해도</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <style>
         * {
@@ -1257,8 +1257,8 @@
 	   {
                 name: '모이와 산',
                 coords: [43.0230805, 141.3223676],
-                emoji: '🌃',
-                popup: '<b>🌃 모이와 산 야경</b><br>해발 531m 삿포로 3대 야경명소<br>일본 신 3대 야경 중 하나<br>로프웨이로 접근 가능<br><a href="https://maps.google.com/?q=43.0230805,141.3223676" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                emoji: '⛰️',
+                popup: '<b>⛰️ 모이와 산 야경</b><br>해발 531m 삿포로 3대 야경명소<br>일본 신 3대 야경 중 하나<br>로프웨이로 접근 가능<br><a href="https://maps.google.com/?q=43.0230805,141.3223676" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '오도리공원',
