--- a/index.html
+++ b/index.html
@@ -2933,6 +2933,12 @@
         }).addTo(map);
         susukino.bindPopup('<b>🌃 스스키노 번화가</b><br>야간 액티비티와 네온사인 거리<br>약 3,500개 음식점 밀집<br><a href="https://maps.google.com/?q=43.05574352922085,141.3534265729573" target="_blank">🗺️ 구글 지도에서 보기</a>');
 
+		// 다누키코지 상점가 마커
+		const tanukikoji = L.marker([43.0572386, 141.352677], {
+    		icon: createCustomIcon('🛍️')
+		}).addTo(map);
+		tanukikoji.bindPopup('<b>🛍️ 다누키코지 상점가</b><br>150년 전통의 아케이드형 쇼핑거리<br>7개 블록에 200여 개 상점 밀집<br><a href="https://maps.google.com/?q=43.0572386,141.352677" target="_blank">🗺️ 구글 지도에서 보기</a>');
+
         // 삿포로 TV 타워 마커
         const tvTower = L.marker([43.06110470000001 , 141.3564246], {
             icon: createCustomIcon('🗼')
