--- a/index.html
+++ b/index.html
@@ -744,7 +744,7 @@
                 </div>
 
 				 <div class="tourist-item">
-    				<h4>✨ 다누키코지 상점가</h4>
+    				<h4>🦝 다누키코지 상점가</h4>
     				<p><strong>홋카이도 최대 실내 상점가</strong>: 1873년 개설된 150년 전통의 아케이드형 쇼핑거리</p>
     				<p><strong>주요 특징</strong>: 7개 블록에 걸쳐 200여 개 상점이 밀집한 전천후 쇼핑공간</p>
     				<p><strong>접근성</strong>: 지하철 오도리역/스스키노역에서 도보 3분, 숙소에서 도보 5분</p>
@@ -1455,9 +1455,9 @@
 
 		// 다누키코지 상점가 마커
 		const tanukikoji = L.marker([43.0572386, 141.352677], {
-    		icon: createCustomIcon('🛍️')
+    		icon: createCustomIcon('🦝')
 		}).addTo(map);
-		tanukikoji.bindPopup('<b>🛍️ 다누키코지 상점가</b><br>150년 전통의 아케이드형 쇼핑거리<br>7개 블록에 200여 개 상점 밀집<br><a href="https://maps.google.com/?q=43.0572386,141.352677" target="_blank">🗺️ 구글 지도에서 보기</a>');
+		tanukikoji.bindPopup('<b>🦝 다누키코지 상점가</b><br>150년 전통의 아케이드형 쇼핑거리<br>7개 블록에 200여 개 상점 밀집<br><a href="https://maps.google.com/?q=43.0572386,141.352677" target="_blank">🗺️ 구글 지도에서 보기</a>');
 
         
         // 삿포로 TV 타워 마커
