--- a/index.html
+++ b/index.html
@@ -1327,49 +1327,49 @@
                 name: '네무로 하나마루',
                 coords: [43.0681096, 141.3518039],
                 emoji: '🍣',
-                popup: '<b>🍣 네무로 하나마루</b><br><a href="https://www.sushi-hanamaru.com/la_kr/" target="_blank">공식 웹사이트</a><br><a href="https://maps.google.com/?q=35.6722448,139.7624127" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍣 네무로 하나마루</b><br><a href="https://www.sushi-hanamaru.com/la_kr/" target="_blank">공식 웹사이트</a><br><a href="https://maps.google.com/?q=43.0681096,141.3518039" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '잇핀 부타동',
                 coords: [43.0680504, 141.3514557],
                 emoji: '🍛',
-                popup: '<b>🍛 잇핀 부타동</b><br>홋카이도 토카치 지역 특산 부타동<br><a href="https://maps.google.com/?q=43.0680504,141.3514557" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍛 잇핀 부타동</b><br>홋카이도 토카치 지역 특산 부타동<br><a href="https://maps.google.com/?q=43.0680504, 141.3514557" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '야키토리 타케토라',
                 coords: [43.0563576 , 141.3568789],
                 emoji: '🍗',
-                popup: '<b>🍗 야키토리 타케토라</b><br>정통 일본식 이자카야<br><a href="https://maps.google.com/?q=43.0563576,141.3568789" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍗 야키토리 타케토라</b><br>정통 일본식 이자카야<br><a href="https://maps.google.com/?q=43.0563576 , 141.3568789" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '스기노',
                 coords: [43.0540969, 141.3512925],
                 emoji: '🐟',
-                popup: '<b>🐟 스기노</b><br>해산물 전문 이자카야<br>어업 출신 사장의 엄선된 해산물<br><a href="https://maps.google.com/?q=43.0540969,141.3512925" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🐟 스기노</b><br>해산물 전문 이자카야<br>어업 출신 사장의 엄선된 해산물<br><a href="https://maps.google.com/?q=43.0540969, 141.3512925" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '히토리 나베 토키지',
                 coords: [43.0505931 , 141.3421023],
                 emoji: '🍲',
-                popup: '<b>🍲 히토리 나베 토키지</b><br>현지인 추천 숨은 맛집<br>대창모인 나베와 게살고로케<br><a href="https://maps.google.com/?q=43.0505931,141.3421023" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍲 히토리 나베 토키지</b><br>현지인 추천 숨은 맛집<br>대창모인 나베와 게살고로케<br><a href="https://maps.google.com/?q=43.0505931 , 141.3421023" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '시하치',
                 coords: [43.0580374 , 141.3552807],
                 emoji: '🍙',
-                popup: '<b>🍙 시하치</b><br>카이센동 전문점<br>다누키코지 내 가성비 맛집<br><a href="https://maps.google.com/?q=43.0580374,141.3552807" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍙 시하치</b><br>카이센동 전문점<br>다누키코지 내 가성비 맛집<br><a href="https://maps.google.com/?q=43.0580374 , 141.3552807" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '니조시장 돈부리차야',
                 coords: [43.058299 , 141.358446],
                 emoji: '🍱',
-                popup: '<b>🍱 니조시장 돈부리차야</b><br>황금 해산물 덮밥<br>7가지 고급 해산물<br><a href="https://maps.google.com/?q=43.058299,141.358446" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🍱 니조시장 돈부리차야</b><br>황금 해산물 덮밥<br>7가지 고급 해산물<br><a href="https://maps.google.com/?q=43.058299 , 141.358446" target="_blank">🗺️ 구글 지도에서 보기</a>'
             },
             {
                 name: '가니도라쿠 삿포로 본점',
                 coords: [43.0617713 , 141.3544506],
                 emoji: '🦀',
-                popup: '<b>🦀 가니도라쿠 삿포로 본점</b><br>홋카이도 대표 게 요리 전문점<br>1964년 창업 고급 게 요리 맛집<br><a href="https://maps.google.com/?q=43.0617713,141.3544506" target="_blank">🗺️ 구글 지도에서 보기</a>'
+                popup: '<b>🦀 가니도라쿠 삿포로 본점</b><br>홋카이도 대표 게 요리 전문점<br>1964년 창업 고급 게 요리 맛집<br><a href="https://maps.google.com/?q=43.0617713 , 141.3544506" target="_blank">🗺️ 구글 지도에서 보기</a>'
             }
         ];
 
