--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                                 <i class="fas fa-clock"></i>
                                 <span>영업중</span>
                             </div>
-                            <a href="https://maps.google.com/?saddr=42.5857748,140.7697763&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
+							<a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
                                 <i class="fas fa-directions"></i> 길찾기
                             </a>
                         </div>
@@ -721,7 +721,7 @@
                                 <i class="fas fa-clock"></i>
                                 <span>영업중</span>
                             </div>
-                            <a href="https://maps.google.com/?saddr=42.5857748,140.7697763&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
+                            <a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
                                 <i class="fas fa-directions"></i> 길찾기
                             </a>
                         </div>
@@ -761,7 +761,7 @@
                                 <i class="fas fa-clock"></i>
                                 <span>영업중</span>
                             </div>
-                            <a href="https://maps.google.com/?saddr=42.5857748,140.7697763&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
+                            <a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
                                 <i class="fas fa-directions"></i> 길찾기
                             </a>
                         </div>
