--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
                 
                 <div class="restaurant">
                     <div class="restaurant-header">
-                        <h3><a href="https://maps.google.com/?q=42.5857748,140.7697763" target="_blank">와카사이모 (若狹芋)</a></h3>
+                        <h3><a href="https://maps.google.com/?q=42.5653869,140.8152829" target="_blank">와카사이모 (若狹芋)</a></h3>
                         <div class="header-actions">
                             <div class="status-indicator status-open" id="status-wakasaimo">
                                 <i class="fas fa-clock"></i>
@@ -755,7 +755,7 @@
                 
                 <div class="restaurant">
                     <div class="restaurant-header">
-                        <h3><a href="https://maps.google.com/?q=42.5857748,140.7697763" target="_blank">도야호 에치고야 (洞爺湖越後屋)</a></h3>
+                        <h3><a href="https://maps.google.com/?q=42.5652068,140.8248455" target="_blank">도야코 에치고야 (洞爺湖越後屋)</a></h3>
                         <div class="header-actions">
                             <div class="status-indicator status-open" id="status-echigoya">
                                 <i class="fas fa-clock"></i>
