--- a/index.html
+++ b/index.html
@@ -674,14 +674,14 @@
                 <h2><span class="emoji">🍎</span>도야 지역 특산품</h2>
                 
                 <div class="restaurant">
-                    <div class="restaurant-header">
-                        <h3><a href="https://maps.google.com/?q=42.5653869,140.8152829" target="_blank">와카사이모 (若狹芋)</a></h3>
+                    < <div class="restaurant-header">
+                        <h3><a href="https://maps.google.com/?q=42.5653869,140.8152829" target="_blank">와카사이모 (若狭芋)</a></h3>
                         <div class="header-actions">
                             <div class="status-indicator status-open" id="status-wakasaimo">
                                 <i class="fas fa-clock"></i>
                                 <span>영업중</span>
                             </div>
-							<a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
+                            <a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5653869,140.8152829&dirflg=w" target="_blank" class="directions-link">
                                 <i class="fas fa-directions"></i> 길찾기
                             </a>
                         </div>
@@ -715,13 +715,13 @@
                                 
                 <div class="restaurant">
                     <div class="restaurant-header">
-                        <h3><a href="https://maps.google.com/?q=42.5652068,140.8248455" target="_blank">도야코 에치고야 (洞爺湖越後屋)</a></h3>
+                        <h3><a href="https://maps.google.com/?q=42.5652068,140.8248455" target="_blank">도야호 에치고야 (洞爺湖越後屋)</a></h3>
                         <div class="header-actions">
                             <div class="status-indicator status-open" id="status-echigoya">
                                 <i class="fas fa-clock"></i>
                                 <span>영업중</span>
                             </div>
-                            <a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5857748,140.7697763&dirflg=w" target="_blank" class="directions-link">
+                            <a href="https://maps.google.com/?saddr=42.5658118,140.824614&daddr=42.5652068,140.8248455&dirflg=w" target="_blank" class="directions-link">
                                 <i class="fas fa-directions"></i> 길찾기
                             </a>
                         </div>
