--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                 <h2><span class="emoji">🍎</span>도야 지역 특산품</h2>
                 
                 <div class="restaurant">
-                    < <div class="restaurant-header">
+                     <div class="restaurant-header">
                         <h3><a href="https://maps.google.com/?q=42.5653869,140.8152829" target="_blank">와카사이모 (若狭芋)</a></h3>
                         <div class="header-actions">
                             <div class="status-indicator status-open" id="status-wakasaimo">
