--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=3.0">
-    <title>북해도 여행 가이드</title>
+    <title>북해도 가이드(?)</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <style>
@@ -611,8 +611,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>⛰️ 북해도 여행 가이드</h1>
-            <div class="subtitle">파란 버튼 클릭 시 해당 섹션으로 이동합니다</div>
+            <h1>⛰️ 북해도 가이드(?)</h1>
+            <div class="subtitle">버튼 클릭 시 해당 섹션으로 이동합니다</div>
         </div>
         
         <div class="navigation-tabs">
