--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@
             </div>
             <div class="rule-item">
                 <span class="rule-number">2)</span>
-                <span class="rule-text">기내 반입 물품 규제 - "액체류, 가루, 겔, 스프레이" 등은 위험 수하물 (부치는 짐)로 분류해야 합니다.</span>
+                <span class="rule-text">기내 반입 물품 규제 - "액체류, 가루, 칼, 스프레이" 등은 위험 수하물 (부치는 짐)로 분류해야 합니다.</span>
             </div>
             <div class="rule-item">
                 <span class="rule-number">3)</span>
@@ -987,7 +987,7 @@
             </div>
             <div class="tip-item">
                 <span class="tip-label">TIP!</span>
-                <span>수하물 보관표(Baggage Claim Tag)는 집을 찾아 출국할 때까지 잘 보관합니다.</span>
+                <span>수하물 보관표(Baggage Claim Tag)는 짐을 찾아 출국할 때까지 잘 보관합니다.</span>
             </div>
         </div>
     </div>
